--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -79,10 +79,12 @@ jobs:
         run: |
           cd ios
           chmod -R 777 .
-          plutil -create xml1 -o ExportOptions.plist -- 
-          plutil -replace method -string app-store ExportOptions.plist
-          plutil -replace uploadBitcode -bool true ExportOptions.plist
-          plutil -replace uploadSymbols -bool true ExportOptions.plist
+          plutil -create xml1 ExportOptions.plist
+          plutil -insert method -string "app-store" ExportOptions.plist
+          plutil -insert destination -string "export" ExportOptions.plist
+          plutil -insert uploadBitcode -bool true ExportOptions.plist
+          plutil -insert uploadSymbols -bool true ExportOptions.plist
+
 
            cat ExportOptions.plist
           # rm -rf ~/Library/Developer/Xcode/DerivedData
