--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -87,30 +87,30 @@ jobs:
 
 
            cat ExportOptions.plist
-          # rm -rf ~/Library/Developer/Xcode/DerivedData
-          # pod deintegrate || true
-          # pod install --repo-update
+          rm -rf ~/Library/Developer/Xcode/DerivedData
+          pod deintegrate || true
+          pod install --repo-update
              
-          # fastlane run update_project_team path:"./IosGithubActionBuild.xcodeproj" teamid:"$TEAM_ID"
-          # xcodebuild \
-          #   -workspace "IosGithubActionBuild.xcworkspace" \
-          #   -scheme "IosGithubActionBuild" \
-          #   -configuration Release \
-          #   -destination "generic/platform=iOS" \
-          #   -archivePath "./build/GenericBuild.xcarchive" \
-          #   CODE_SIGN_IDENTITY="iPhone Distribution" \
-          #   CODE_SIGN_STYLE=Manual \
-          #   PROVISIONING_PROFILE_SPECIFIER="app-store-profile-sample-github-actions" \
-          #   clean archive | xcbeautify
+          fastlane run update_project_team path:"./IosGithubActionBuild.xcodeproj" teamid:"$TEAM_ID"
+          xcodebuild \
+            -workspace "IosGithubActionBuild.xcworkspace" \
+            -scheme "IosGithubActionBuild" \
+            -configuration Release \
+            -destination "generic/platform=iOS" \
+            -archivePath "./build/GenericBuild.xcarchive" \
+            CODE_SIGN_IDENTITY="iPhone Distribution" \
+            CODE_SIGN_STYLE=Manual \
+            PROVISIONING_PROFILE_SPECIFIER="app-store-profile-sample-github-actions" \
+            clean archive | xcbeautify
 
-          # xcodebuild -exportArchive \
-          #   -archivePath "./build/GenericBuild.xcarchive" \
-          #   -exportPath "./build" \
-          #   -exportOptionsPlist ./ExportOptions.plist \
-          #   CODE_SIGN_IDENTITY="iPhone Distribution" \
-          #   CODE_SIGN_STYLE=Manual \
-          #   PROVISIONING_PROFILE_SPECIFIER="app-store-profile-sample-github-actions" | xcbeautify
-          # eza --tree build
+          xcodebuild -exportArchive \
+            -archivePath "./build/GenericBuild.xcarchive" \
+            -exportPath "./build" \
+            -exportOptionsPlist ./ExportOptions.plist \
+            CODE_SIGN_IDENTITY="iPhone Distribution" \
+            CODE_SIGN_STYLE=Manual \
+            PROVISIONING_PROFILE_SPECIFIER="app-store-profile-sample-github-actions" | xcbeautify
+          eza --tree build
           # fastlane run build_ios_app \
           #   scheme:"IosGithubActionBuild" \
           #   workspace:"IosGithubActionBuild.xcworkspace" \
