--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -79,8 +79,8 @@ jobs:
         run: |
           cd ios
           chmod -R 777 .
-          # plutil -create xml1 ExportOptions.plist
-          # plutil -insert method -string "app-store-connect" ExportOptions.plist
+          plutil -create xml1 ExportOptions.plist
+          plutil -insert method -string "app-store-connect" ExportOptions.plist
           # plutil -insert uploadBitcode -bool true ExportOptions.plist
           # plutil -insert uploadSymbols -bool true ExportOptions.plist
 
@@ -91,35 +91,35 @@ jobs:
           pod install --repo-update
              
           fastlane run update_project_team path:"./IosGithubActionBuild.xcodeproj" teamid:"$TEAM_ID"
-          # xcodebuild \
-          #   -workspace "IosGithubActionBuild.xcworkspace" \
-          #   -scheme "IosGithubActionBuild" \
-          #   -configuration Release \
-          #   -destination "generic/platform=iOS" \
-          #   -archivePath "./build/GenericBuild.xcarchive" \
-          #   CODE_SIGN_IDENTITY="iPhone Distribution" \
-          #   CODE_SIGN_STYLE=Manual \
-          #   PROVISIONING_PROFILE_SPECIFIER="app-store-profile-sample-github-actions" \
-          #   clean archive | xcbeautify
+          xcodebuild \
+            -workspace "IosGithubActionBuild.xcworkspace" \
+            -scheme "IosGithubActionBuild" \
+            -configuration Release \
+            -destination "generic/platform=iOS" \
+            -archivePath "./build/GenericBuild.xcarchive" \
+            CODE_SIGN_IDENTITY="iPhone Distribution" \
+            CODE_SIGN_STYLE=Manual \
+            PROVISIONING_PROFILE_SPECIFIER="app-store-profile-sample-github-actions" \
+            clean archive | xcbeautify
 
-          # xcodebuild -exportArchive \
-          #   -archivePath "./build/GenericBuild.xcarchive" \
-          #   -exportPath "./build" \
-          #   -exportOptionsPlist ./ExportOptions.plist \
-          #   CODE_SIGN_IDENTITY="iPhone Distribution" \
-          #   CODE_SIGN_STYLE=Manual \
-          #   PROVISIONING_PROFILE_SPECIFIER="app-store-profile-sample-github-actions" | xcbeautify
+          xcodebuild -exportArchive \
+            -archivePath "./build/GenericBuild.xcarchive" \
+            -exportPath "./build/GenericBuild.ipa" \
+            -exportOptionsPlist ./ExportOptions.plist \
+            CODE_SIGN_IDENTITY="iPhone Distribution" \
+            CODE_SIGN_STYLE=Manual \
+            PROVISIONING_PROFILE_SPECIFIER="app-store-profile-sample-github-actions" | xcbeautify
           
-          fastlane run build_ios_app \
-            scheme:"IosGithubActionBuild" \
-            workspace:"IosGithubActionBuild.xcworkspace" \
-            export_method:"app-store" \
-            output_directory:"./build" \
-            output_name:"GenericBuild.ipa" \
-            destination:"generic/platform=iOS" \
-            configuration:"Release" \
-            clean:true \
-            xcargs:"CODE_SIGN_IDENTITY='iPhone Distribution' CODE_SIGN_STYLE=Manual PROVISIONING_PROFILE_SPECIFIER='app-store-profile-sample-github-actions'"
+          # fastlane run build_ios_app \
+          #   scheme:"IosGithubActionBuild" \
+          #   workspace:"IosGithubActionBuild.xcworkspace" \
+          #   export_method:"app-store" \
+          #   output_directory:"./build" \
+          #   output_name:"GenericBuild.ipa" \
+          #   destination:"generic/platform=iOS" \
+          #   configuration:"Release" \
+          #   clean:true \
+          #   xcargs:"CODE_SIGN_IDENTITY='iPhone Distribution' CODE_SIGN_STYLE=Manual PROVISIONING_PROFILE_SPECIFIER='app-store-profile-sample-github-actions'"
           eza --tree build
           
       # - name:  Ios App Upload
