--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -141,7 +141,7 @@ jobs:
               -exportOptionsPlist ./ExportOptions.plist \
               CODE_SIGN_IDENTITY="iPhone Distribution" \
               CODE_SIGN_STYLE=Manual \
-              PROVISIONING_PROFILE_SPECIFIER="app-store-profile-sample-github-actions" | xcbeautify
+              PROVISIONING_PROFILE_SPECIFIER="app-store-profile-sample-github-actions" 
           eza --tree build
       - name: Cleanup
         if: always()
