--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -140,6 +140,7 @@ jobs:
               -archivePath "./build/IosGithubActionBuild.xcarchive" \
               -exportPath "./build/IosGithubActionBuild.ipa" \
               -exportOptionsPlist ./ExportOptions.plist \
+              -verbose
               # CODE_SIGN_IDENTITY="iPhone Distribution" \
               # CODE_SIGN_STYLE=Manual \
               # PROVISIONING_PROFILE_SPECIFIER="app-store-profile-sample-github-actions" 
