--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -81,7 +81,7 @@ jobs:
           chmod -R 777 .
           plutil -create xml1 ExportOptions.plist
           plutil -insert method -string "app-store-connect" ExportOptions.plist
-          # plutil -insert uploadBitcode -bool true ExportOptions.plist
+          plutil -insert uploadBitcode -bool true ExportOptions.plist
           # plutil -insert uploadSymbols -bool true ExportOptions.plist
 
 
@@ -136,6 +136,7 @@ jobs:
         run: |
           cd ios
           rm -rf ~/Library/Developer/Xcode/DerivedData
+          rm -rf /var/folders/*
           xcodebuild -exportArchive \
               -archivePath "./build/IosGithubActionBuild.xcarchive" \
               -exportPath "./build/IosGithubActionBuild.ipa" \
