--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -91,28 +91,28 @@ jobs:
           pod install --repo-update
              
           fastlane run update_project_team path:"./IosGithubActionBuild.xcodeproj" teamid:"$TEAM_ID"
-          # xcodebuild \
-          #   -workspace "IosGithubActionBuild.xcworkspace" \
-          #   -scheme "IosGithubActionBuild" \
-          #   -configuration Release \
-          #   -destination "generic/platform=iOS" \
-          #   -archivePath "./build/IosGithubActionBuild.xcarchive" \
-          #   CODE_SIGN_IDENTITY="iPhone Distribution" \
-          #   CODE_SIGN_STYLE=Manual \
-          #   PROVISIONING_PROFILE_SPECIFIER="app-store-profile-sample-github-actions" \
-          #   clean archive | xcbeautify
+          xcodebuild \
+            -workspace "IosGithubActionBuild.xcworkspace" \
+            -scheme "IosGithubActionBuild" \
+            -configuration Release \
+            -destination "generic/platform=iOS" \
+            -archivePath "./build/IosGithubActionBuild.xcarchive" \
+            CODE_SIGN_IDENTITY="iPhone Distribution" \
+            CODE_SIGN_STYLE=Manual \
+            PROVISIONING_PROFILE_SPECIFIER="app-store-profile-sample-github-actions" \
+            clean archive | xcbeautify
           
-          fastlane run build_ios_app \
-            scheme:"IosGithubActionBuild" \
-            workspace:"IosGithubActionBuild.xcworkspace" \
-            export_method:"app-store" \
-            output_directory:"./build" \
-            output_name:"GenericBuild.ipa" \
-            destination:"generic/platform=iOS" \
-            configuration:"Release" \
-            clean:true \
-            xcargs:"CODE_SIGN_IDENTITY='iPhone Distribution' CODE_SIGN_STYLE=Manual PROVISIONING_PROFILE_SPECIFIER='app-store-profile-sample-github-actions'"
-            eza --tree build
+          # fastlane run build_ios_app \
+          #   scheme:"IosGithubActionBuild" \
+          #   workspace:"IosGithubActionBuild.xcworkspace" \
+          #   export_method:"app-store" \
+          #   output_directory:"./build" \
+          #   output_name:"GenericBuild.ipa" \
+          #   destination:"generic/platform=iOS" \
+          #   configuration:"Release" \
+          #   clean:true \
+          #   xcargs:"CODE_SIGN_IDENTITY='iPhone Distribution' CODE_SIGN_STYLE=Manual PROVISIONING_PROFILE_SPECIFIER='app-store-profile-sample-github-actions'"
+          #   eza --tree build
           
           
       # - name:  Ios App Upload
@@ -125,20 +125,20 @@ jobs:
       #     fastlane run upload_to_testflight \
       #       ipa:"./build/GenericBuild.ipa"
 
-      # - name: Archive ipa
-      #   run: |
-      #     cd ios
-      #     rm -rf ~/Library/Developer/Xcode/DerivedData
-      #     rm -rf /var/folders/*
-      #     xcodebuild -exportArchive \
-      #         -archivePath "./build/IosGithubActionBuild.xcarchive" \
-      #         -exportPath "./build/IosGithubActionBuild.ipa" \
-      #         -exportOptionsPlist ./ExportOptions.plist \
-      #         -verbose
-      #         CODE_SIGN_IDENTITY="iPhone Distribution" \
-      #         CODE_SIGN_STYLE=Manual \
-      #         PROVISIONING_PROFILE_SPECIFIER="app-store-profile-sample-github-actions" 
-          # eza --tree build
+      - name: Archive ipa
+        run: |
+          cd ios
+          rm -rf ~/Library/Developer/Xcode/DerivedData
+          xcodebuild -exportArchive \
+              -archivePath "./build/IosGithubActionBuild.xcarchive" \
+              -exportPath "./build/IosGithubActionBuild.ipa" \
+              -exportOptionsPlist ./ExportOptions.plist \
+              -verbose
+              -destination "generic/platform=iOS"
+              CODE_SIGN_IDENTITY="iPhone Distribution" \
+              CODE_SIGN_STYLE=Manual \
+              PROVISIONING_PROFILE_SPECIFIER="app-store-profile-sample-github-actions" 
+          eza --tree build
       - name: Cleanup
         if: always()
         run: |
