--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -81,7 +81,7 @@ jobs:
           chmod -R 777 .
           plutil -create xml1 ExportOptions.plist
           plutil -insert method -string "app-store-connect" ExportOptions.plist
-          plutil -insert uploadBitcode -bool true ExportOptions.plist
+          plutil -insert compileBitcode -bool false ExportOptions.plist
           # plutil -insert uploadSymbols -bool true ExportOptions.plist
 
 
