--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -80,8 +80,8 @@ jobs:
           cd ios
           chmod -R 777 .
           # plutil -create xml1 ExportOptions.plist
-          # plutil -insert method -string "app-store-connect" ExportOptions.plist
-          # plutil -insert compileBitcode -bool false ExportOptions.plist
+          plutil -insert method -string "app-store-connect" ExportOptions.plist
+          plutil -insert compileBitcode -bool false ExportOptions.plist
           # plutil -insert uploadSymbols -bool true ExportOptions.plist
 
 
@@ -107,7 +107,7 @@ jobs:
             workspace:"IosGithubActionBuild.xcworkspace" \
             export_method:"app-store" \
             output_directory:"./build" \
-            export_options:{compileBitcode: false, method: 'app-store'} \
+            export_options:"./ExportOptions.plist" \
             output_name:"GenericBuild.ipa" \
             destination:"generic/platform=iOS" \
             configuration:"Release" \
