--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -112,7 +112,7 @@ jobs:
             destination:"generic/platform=iOS" \
             configuration:"Release" \
             clean:true \
-            xcargs:"CODE_SIGN_IDENTITY='iPhone Distribution' CODE_SIGN_STYLE=Manual PROVISIONING_PROFILE_SPECIFIER='app-store-profile-sample-github-actions'"
+            xcargs:"ENABLE_TESTABILITY=YES CODE_SIGN_IDENTITY='iPhone Distribution' CODE_SIGN_STYLE=Manual PROVISIONING_PROFILE_SPECIFIER='app-store-profile-sample-github-actions'"
             eza --tree build
           
           
