--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -7,10 +7,11 @@ jobs:
     runs-on: macos-latest # Uses macOS runner with Xcode pre-installed
 
     steps:
-      - name: Set up Xcode 14
-        uses: macos-setup-xcode@v2
+      - name: Setup xcode 14
+        uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '14.0'
+          xcode-version: '14.3.1'
+          
       - name: Checkout repository
         uses: actions/checkout@v3
 
