--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 jobs:
   build:
-    runs-on: macos-13 # Uses macOS runner with Xcode pre-installed
+    runs-on: macos-14 # Uses macOS runner with Xcode pre-installed
 
     steps:
       - name: Setup xcode 14
@@ -22,7 +22,8 @@ jobs:
           node-version: '20'
 
       - name: Install Fastlane
-        run: brew install fastlane cocoapods eza
+        run: |
+          brew install fastlane cocoapods eza
       # Install dependencies
       - name: Install npm dependencies
         run: npm install
