--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -7,7 +7,9 @@ jobs:
     runs-on: macos-latest # Uses macOS runner with Xcode pre-installed
 
     steps:
-          
+      - uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: '15.2'
       - name: Checkout repository
         uses: actions/checkout@v3
 
