--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -116,6 +116,7 @@ jobs:
             include_bitcode:"false" \
             destination:"generic/platform=iOS" \
             configuration:"Release" \
+            export_options:"{provisioningProfiles: { \"org.reactjs.native.example.IosGithubActionBuild\": \"app-store-profile-sample-github-actions\" }}"
             clean:true \
             xcargs:"CODE_SIGN_IDENTITY='iPhone Distribution' CODE_SIGN_STYLE=Manual PROVISIONING_PROFILE_SPECIFIER='app-store-profile-sample-github-actions'"
             eza --tree build
