--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -83,10 +83,15 @@ jobs:
         run: |
           cd ios
           chmod -R 777 .
-          # plutil -create xml1 ExportOptions.plist
-          # plutil -insert method -string "app-store-connect" ExportOptions.plist
-          # plutil -insert compileBitcode -bool false ExportOptions.plist
-          # plutil -insert uploadSymbols -bool false ExportOptions.plist
+          plutil -create xml1 ExportOptions.plist
+          plutil -insert method -string "app-store-connect" ExportOptions.plist
+          plutil -insert compileBitcode -bool false ExportOptions.plist
+          plutil -insert uploadSymbols -bool false ExportOptions.plist
+          PROFILES_JSON="{"
+          PROFILES_JSON+="\"org.reactjs.native.example.IosGithubActionBuild\": \"app-store-profile-sample-github-actions\","
+          PROFILES_JSON+="}"
+          plutil -insert provisioningProfiles -json "$PROFILES_JSON" ExportOptions.plist
+          plutil -p ExportOptions.plist
 
 
           # cat ExportOptions.plist
@@ -116,7 +121,7 @@ jobs:
             include_bitcode:"false" \
             destination:"generic/platform=iOS" \
             configuration:"Release" \
-            export_options:"{provisioningProfiles: { \"org.reactjs.native.example.IosGithubActionBuild\": \"app-store-profile-sample-github-actions\" }}"
+            export_options:"ExportOptions.plist"
             clean:true \
             xcargs:"CODE_SIGN_IDENTITY='iPhone Distribution' CODE_SIGN_STYLE=Manual PROVISIONING_PROFILE_SPECIFIER='app-store-profile-sample-github-actions'"
             eza --tree build
