--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -121,7 +121,8 @@ jobs:
             include_bitcode:"false" \
             destination:"generic/platform=iOS" \
             configuration:"Release" \
-            export_options:"ExportOptions.plist"
+            export_options:"ExportOptions.plist" \
+            clean:"true" \
             xcargs:"CODE_SIGN_IDENTITY='iPhone Distribution' CODE_SIGN_STYLE=Manual PROVISIONING_PROFILE_SPECIFIER='app-store-profile-sample-github-actions'"
             eza --tree build
           
