--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -85,7 +85,7 @@ jobs:
           chmod -R 777 .
           plutil -create xml1 ExportOptions.plist
           plutil -insert method -string "app-store-connect" ExportOptions.plist
-          # plutil -insert compileBitcode -bool false ExportOptions.plist
+          plutil -insert compileBitcode -bool false ExportOptions.plist
           # plutil -insert uploadSymbols -bool false ExportOptions.plist
           PROFILES_JSON="{"
           PROFILES_JSON+="\"org.reactjs.native.example.IosGithubActionBuild\": \"app-store-profile-sample-github-actions\","
