--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -82,7 +82,7 @@ jobs:
             configuration:"Release" \
             export_options:"ExportOptions.plist" \
             clean:"true" \
-            xcargs:"--quiet CODE_SIGN_IDENTITY='iPhone Distribution' CODE_SIGN_STYLE=Manual PROVISIONING_PROFILE_SPECIFIER='app-store-profile-sample-github-actions'"
+            xcargs:"CODE_SIGN_IDENTITY='iPhone Distribution' CODE_SIGN_STYLE=Manual PROVISIONING_PROFILE_SPECIFIER='app-store-profile-sample-github-actions'"
             eza --tree build
           
           
