--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -52,7 +52,6 @@ jobs:
         run: |
           cd ios
           chmod -R 777 .
-          export FASTLANE_SKIP_LOGS=true
           plutil -create xml1 ExportOptions.plist
           plutil -insert method -string "app-store-connect" ExportOptions.plist
           plutil -insert compileBitcode -bool false ExportOptions.plist
@@ -83,6 +82,7 @@ jobs:
             configuration:"Release" \
             export_options:"ExportOptions.plist" \
             clean:"true" \
+            suppress_xcode_output:"true" \
             xcargs:"CODE_SIGN_IDENTITY='iPhone Distribution' CODE_SIGN_STYLE=Manual PROVISIONING_PROFILE_SPECIFIER='app-store-profile-sample-github-actions'"
             eza --tree build
           
