--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -87,15 +87,16 @@ jobs:
             eza --tree build
           
           
-      # - name:  Ios App Upload
-      #   run: |
-      #     fastlane run app_store_connect_api_key \
-      #     key_id:${{ secrets.APP_STORE_CONNECT_API_KEY_KEY_ID }} \
-      #     issuer_id:${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }} \
-      #     key_content:${{ secrets.APP_STORE_CONNECT_API_KEY_KEY }}
+      - name:  Ios App Upload
+        run: |
+          echo ${{ secrets.APP_STORE_CONNECT_API_KEY_KEY }} | base64 --decode ./api_key.p8
+          fastlane run app_store_connect_api_key \
+          key_id:${{ secrets.APP_STORE_CONNECT_API_KEY_KEY_ID }} \
+          issuer_id:${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }} \
+          key_filepath:"./api_key.p8
 
-      #     fastlane run upload_to_testflight \
-      #       ipa:"./build/GenericBuild.ipa"
+          fastlane run upload_to_testflight \
+            ipa:"./build/GenericBuild.ipa"
 
       - name: Cleanup
         if: always()
