--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -90,7 +90,7 @@ jobs:
       - name:  Ios App Upload
         run: |
           cd ios
-          echo "${{ secrets.APP_STORE_CONNECT_API_KEY_KEY }}" | base64 --decode api_key.p8
+          echo "${{ secrets.APP_STORE_CONNECT_API_KEY_KEY }}" | base64 --decode > api_key.p8
           fastlane run app_store_connect_api_key \
           key_id:${{ secrets.APP_STORE_CONNECT_API_KEY_KEY_ID }} \
           issuer_id:${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }} \
