--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -90,11 +90,12 @@ jobs:
       - name:  Ios App Upload
         run: |
           cd ios
+          export PILOT_APPLE_ID=
           echo "${{ secrets.APP_STORE_CONNECT_API_KEY_KEY }}" | base64 --decode > api_key.p8
           fastlane run app_store_connect_api_key \
           key_id:${{ secrets.APP_STORE_CONNECT_API_KEY_KEY_ID }} \
           issuer_id:${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }} \
-          key_filepath:"./api_key.p8"
+          key_filepath:"./api_key.p8" 1> /dev/null
 
           fastlane run upload_to_testflight \
             ipa:"./build/GenericBuild.ipa"
@@ -104,6 +105,7 @@ jobs:
         run: |
           # Remove the decrypted certificate and provisioning profile
           rm -rf certificate.p12 profile.mobileprovision
+          rm -rf ios/api_key.p8
           # Delete the keychain after the build process
           security delete-keychain build.keychain
             
