--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -90,7 +90,8 @@ jobs:
       - name:  Ios App Upload
         run: |
           cd ios
-          export PILOT_APPLE_ID=
+          export PILOT_APPLE_ID="6738489200"
+          export PILOT_USERNAME="devops@travancoreanalytics.com"
           echo "${{ secrets.APP_STORE_CONNECT_API_KEY_KEY }}" | base64 --decode > api_key.p8
           fastlane run app_store_connect_api_key \
           key_id:${{ secrets.APP_STORE_CONNECT_API_KEY_KEY_ID }} \
