--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -99,7 +99,10 @@ jobs:
           key_filepath:"./api_key.p8" 1> /dev/null
 
           fastlane run upload_to_testflight \
-            ipa:"./build/GenericBuild.ipa"
+            ipa:"./build/GenericBuild.ipa" \
+            key_id:${{ secrets.APP_STORE_CONNECT_API_KEY_KEY_ID }} \
+            issuer_id:${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }} \
+            key_filepath:"./api_key.p8" 1> /dev/null
 
       - name: Cleanup
         if: always()
