--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -87,22 +87,44 @@ jobs:
             eza --tree build
           
           
-      - name:  Ios App Upload
+      # - name:  Ios App Upload
+      #   run: |
+      #     cd ios
+      #     export PILOT_APPLE_ID="6738489200"
+      #     export PILOT_USERNAME="devops@travancoreanalytics.com"
+      #     echo "${{ secrets.APP_STORE_CONNECT_API_KEY_KEY }}" | base64 --decode > api_key.p8
+      #     fastlane run app_store_connect_api_key \
+      #     key_id:${{ secrets.APP_STORE_CONNECT_API_KEY_KEY_ID }} \
+      #     issuer_id:${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }} \
+      #     key_filepath:"./api_key.p8" 1> /dev/null
+
+      #     fastlane run upload_to_testflight \
+      #       ipa:"./build/GenericBuild.ipa" \
+      #       key_id:${{ secrets.APP_STORE_CONNECT_API_KEY_KEY_ID }} \
+      #       issuer_id:${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }} \
+      #       key_filepath:"./api_key.p8" 1> /dev/null
+      - name: Generate `api_key.json`
+        run: |
+          cd ios
+          echo '{
+            "key_id": "${APP_STORE_CONNECT_KEY_ID}",
+            "issuer_id": "${APP_STORE_CONNECT_ISSUER_ID}",
+            "key": "${APP_STORE_CONNECT_API_KEY}"
+          }' > api_key.json
+        env:
+          APP_STORE_CONNECT_KEY_ID: ${{ secrets.APP_STORE_CONNECT_KEY_ID }}
+          APP_STORE_CONNECT_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_ISSUER_ID }}
+          APP_STORE_CONNECT_API_KEY: ${{ secrets.APP_STORE_CONNECT_API_KEY }}
+
+      - name: Upload to Testflight
         run: |
           cd ios
           export PILOT_APPLE_ID="6738489200"
           export PILOT_USERNAME="devops@travancoreanalytics.com"
-          echo "${{ secrets.APP_STORE_CONNECT_API_KEY_KEY }}" | base64 --decode > api_key.p8
-          fastlane run app_store_connect_api_key \
-          key_id:${{ secrets.APP_STORE_CONNECT_API_KEY_KEY_ID }} \
-          issuer_id:${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }} \
-          key_filepath:"./api_key.p8" 1> /dev/null
-
           fastlane run upload_to_testflight \
             ipa:"./build/GenericBuild.ipa" \
-            key_id:${{ secrets.APP_STORE_CONNECT_API_KEY_KEY_ID }} \
-            issuer_id:${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }} \
-            key_filepath:"./api_key.p8" 1> /dev/null
+            api_key_path:"./api_key.json"
+            
 
       - name: Cleanup
         if: always()
