--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -87,35 +87,24 @@ jobs:
             eza --tree build
           
           
-      # - name:  Ios App Upload
-      #   run: |
-      #     cd ios
-      #     export PILOT_APPLE_ID="6738489200"
-      #     export PILOT_USERNAME="devops@travancoreanalytics.com"
-      #     echo "${{ secrets.APP_STORE_CONNECT_API_KEY_KEY }}" | base64 --decode > api_key.p8
-      #     fastlane run app_store_connect_api_key \
-      #     key_id:${{ secrets.APP_STORE_CONNECT_API_KEY_KEY_ID }} \
-      #     issuer_id:${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }} \
-      #     key_filepath:"./api_key.p8" 1> /dev/null
-
-      #     fastlane run upload_to_testflight \
-      #       ipa:"./build/GenericBuild.ipa" \
-      #       key_id:${{ secrets.APP_STORE_CONNECT_API_KEY_KEY_ID }} \
-      #       issuer_id:${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }} \
-      #       key_filepath:"./api_key.p8" 1> /dev/null
-      - name: Generate `api_key.json`
+      - name:  Ios App Upload
         run: |
           cd ios
-          echo "$APP_STORE_CONNECT_API_KEY" | base64 --decode > api_key.p8
-          xcrun altool --upload-app \
-          --type ios \
-          --file "./build/GenericBuild.ipa" \
-          --apiKey @api_key.p8 \
-          --apiIssuer "$APP_STORE_CONNECT_ISSUER_ID"
-        env:
-          APP_STORE_CONNECT_KEY_ID: ${{ secrets.APP_STORE_CONNECT_KEY_ID }}
-          APP_STORE_CONNECT_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_ISSUER_ID }}
-          APP_STORE_CONNECT_API_KEY: ${{ secrets.APP_STORE_CONNECT_API_KEY }}
+          export PILOT_APPLE_ID="6738489200"
+          export PILOT_USERNAME="devops@travancoreanalytics.com"
+          echo "${{ secrets.APP_STORE_CONNECT_API_KEY_KEY }}" | base64 --decode > api_key.p8
+          fastlane run app_store_connect_api_key \
+          key_id:${{ secrets.APP_STORE_CONNECT_API_KEY_KEY_ID }} \
+          issuer_id:${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }} \
+          key_filepath:"./api_key.p8" 1> /dev/null
+
+          fastlane run upload_to_testflight \
+            ipa:"./build/GenericBuild.ipa" \
+            api_key:{"key_id":"${{ secrets.APP_STORE_CONNECT_API_KEY_KEY_ID }}", \
+                     "issuer_id":"${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }}", \
+                     "key_filepath":"./api_key.p8"}
+            
+
             
 
       - name: Cleanup
