--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -91,6 +91,7 @@ jobs:
         
         run: |
           cd ios
+          mkdir fastlane
           export PILOT_APPLE_ID="6738489200"
           export PILOT_USERNAME="devops@travancoreanalytics.com"
           echo "${{ secrets.APP_STORE_CONNECT_API_KEY_KEY }}" | base64 --decode > api_key.p8
@@ -104,7 +105,9 @@ jobs:
           #   api_key:'{"key_id":"${{ secrets.APP_STORE_CONNECT_API_KEY_KEY_ID }}",
           #            "issuer_id":"${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }}",
           #            "key_filepath":"./api_key.p8"}'
-          cat <<EOF > Upload
+          cat <<EOF > fastlane/Fastfile
+          default_platform(:ios)
+            platform :ios do
                 lane :beta do
                   api_key = app_store_connect_api_key(
                     key_id: "${{ secrets.APP_STORE_CONNECT_API_KEY_KEY_ID }}",
@@ -117,8 +120,10 @@ jobs:
                         api_key: api_key
                       )
                 end
-                EOF
-            fastlane -f Upload beta
+              end
+            EOF
+  
+            fastlane ios beta
 
             
 
