--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -123,9 +123,8 @@ jobs:
               end
             EOF
   
-            fastlane ios beta
-
-            
+      - name: upload
+        run: fastlane ios beta
 
       - name: Cleanup
         if: always()
