--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -104,7 +104,7 @@ jobs:
           #   api_key:'{"key_id":"${{ secrets.APP_STORE_CONNECT_API_KEY_KEY_ID }}",
           #            "issuer_id":"${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }}",
           #            "key_filepath":"./api_key.p8"}'
-          cat <<EOF > Fastfile
+          cat > Fastfile << 'EOF'
           default_platform(:ios)
             platform :ios do
                 lane :beta do
@@ -123,7 +123,7 @@ jobs:
             EOF
   
       - name: upload
-        run: cat Fastfile # fastlane ios beta
+        run: cd ios && cat Fastfile # fastlane ios beta
 
       - name: Cleanup
         if: always()
