--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -91,19 +91,9 @@ jobs:
         
         run: |
           cd ios
-          export PILOT_APPLE_ID="6738489200"
-          export PILOT_USERNAME="devops@travancoreanalytics.com"
+          # export PILOT_APPLE_ID="6738489200"
+          # export PILOT_USERNAME="devops@travancoreanalytics.com"
           echo "${{ secrets.APP_STORE_CONNECT_API_KEY_KEY }}" | base64 --decode > api_key.p8
-          # fastlane run app_store_connect_api_key \
-          # key_id:${{ secrets.APP_STORE_CONNECT_API_KEY_KEY_ID }} \
-          # issuer_id:${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }} \
-          # key_filepath:"./api_key.p8" 1> /dev/null
-
-          # fastlane run upload_to_testflight \
-          #   ipa:"./build/GenericBuild.ipa" \
-          #   api_key:'{"key_id":"${{ secrets.APP_STORE_CONNECT_API_KEY_KEY_ID }}",
-          #            "issuer_id":"${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }}",
-          #            "key_filepath":"./api_key.p8"}'
           cat > fastlane/Fastfile << 'EOF'
           default_platform(:ios)
             platform :ios do
